Fix DESIGN-17: Removed raw type usages